# bazelisk

./: .bazelrc  .flake8  .gitignore  .goreleaser.yml  BUILD  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  bazelisk.d.ts  bazelisk.go  bazelisk.js  bazelisk.py  bazelisk_test.go  bazelisk_test.py  bazelisk_test.sh  bazelisk_version_test.go  build.sh  def.bzl  defs.bzl  go.mod  go.sum  package.json  pyproject.toml  releases_for_tests.json  rules_nodejs.pr1591.patch  sample-issues-migration.json  stamp.sh  test.sh
.bazelci/: config.yml
.github/: dependabot.yml
.github/workflows/: apisec-scan.yml  checksum.yaml  goreleaser.yml
config/: BUILD  config.go
configs/: BUILD  config.go
core/: BUILD  core.go  core_test.go  repositories.go  repositories_test.go  wrapper_helpers.go  wrapper_helpers_nonwindows.go
core/configs/: BUILD.bazel  configs.go
core/path/: BUILD.bazel  path.go
deb/: BUILD  description.txt
httputil/: BUILD  bazel-release.pub.gpg  fake.go  httputil.go  httputil_test.go
httputil/httputil_test_helper/: BUILD  httputil_test_helper.go
httputil/progress/: BUILD  progress.go  progress_test.go
repositories/: BUILD  gcs.go  github.go
runfiles/: BUILD  runfiles.go
scripts/: populate_bazel_cache.ps1  populate_bazel_cache.sh
sha256sum/: BUILD  main.go
versions/: BUILD  versions.go
ws/: BUILD  ws.go
افسانه1361/: Bazellisk
ส้อมบิตฤาษี/บาเซลิสก์/: README.md
