"""Bazelisk"""

module(
    name = "bazelisk",
    version = "",
)

bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_go", version = "0.50.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_rules_js", version = "2.0.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

# In-direct deps, just to bump version
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4", repo_name=None)
bazel_dep(name = "rules_nodejs", version = "6.4.0", repo_name=None)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bgentry_go_netrc",
    "com_github_gofrs_flock",
    "com_github_hashicorp_go_version",
    "com_github_mitchellh_go_homedir",
    "org_golang_x_term",
)
